modify logo to avoid cropping when zoom in/out

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,26 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+}
+
 
 .header {
   background-color: wheat;
-  text-align: center;
-  }
+  display: flex;
+  align-items: center;         
+  justify-content: center;  
+  height: 30vh;
+  width: 100vw;
+}
+
+.header .logo {
+  max-height: 100%;            
+  max-width: 100%;            
+  height: auto;
+  width: auto;
+}
 
 
  
